// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container component snapshot 1`] = `
<div
  className="App"
>
  <div
    className="header"
  >
    <div
      className="header-button"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="MenuIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
      </button>
    </div>
    <h1
      className="header"
    />
  </div>
  <div
    className="container"
  >
    <div
      className="right-column"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="footer-container"
  >
    <div
      className="footer-controls"
    >
      <a
        href="/privacy"
        onClick={[Function]}
      >
        Privacy
      </a>
      <a
        href="/contact"
        onClick={[Function]}
      >
        Contact
      </a>
    </div>
  </div>
</div>
`;

exports[`Container with title component snapshot 1`] = `
<div
  className="App"
>
  <div
    className="header"
  >
    <div
      className="header-button"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="MenuIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
      </button>
    </div>
    <h1
      className="header"
    >
      This is a title
    </h1>
  </div>
  <div
    className="container"
  >
    <div
      className="right-column"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="footer-container"
  >
    <div
      className="footer-controls"
    >
      <a
        href="/privacy"
        onClick={[Function]}
      >
        Privacy
      </a>
      <a
        href="/contact"
        onClick={[Function]}
      >
        Contact
      </a>
    </div>
  </div>
</div>
`;

exports[`Container without navigation component snapshot 1`] = `
<div
  className="App"
>
  <div
    className="header"
  >
    <div
      className="header-button"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="MenuIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
    <h1
      className="header"
    />
  </div>
  <div
    className="container"
  >
    <div
      className="right-column"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="footer-container"
  >
    <div
      className="footer-controls"
    >
      <a
        href="/privacy"
        onClick={[Function]}
      >
        Privacy
      </a>
      <a
        href="/contact"
        onClick={[Function]}
      >
        Contact
      </a>
    </div>
  </div>
</div>
`;
